multiple connections to pointcloud ports working disconnect broken

--- a/Runtime/Base/UModule.org
+++ b/Runtime/Base/UModule.org
@@ -4,7 +4,6 @@
 :PROPERTIES:
 :header-args:csharp: :noweb yes
 :END:
-
 ** Patching
 The URack Unity API is constructed in a way that makes it easy to create input
 setters for script properties, and have them respond to updates on their
@@ -13,13 +12,13 @@ corresponding OSC address.
 It does this by patching each derived UModule with some method prefixes
 
 I chose this instead of using virtual methods in this base class, because it:
-    1. strips out some boiler-plate code that would be necessary when simply
-       providing virtual methods to override.
-    2. maintains compatibility with existing scripts Unity developers may have
-       in their arsenal.
-    3. hides the UModule-specific behaviour from the derived class, because
+    1. Strips out some boiler-plate code that would be necessary when simply
+       providing virtual methods to override
+    2. Maintains compatibility with existing scripts Unity developers may have
+       in their arsenal
+    3. Hides the UModule-specific behaviour from the derived class, because
        these functions simply don't need to be visible to whoever is
-       implementing a new module.
+       implementing a new module
 
 If virtual methods were used to implement UModule-specific behaviour…
 #+BEGIN_SRC csharp
@@ -33,8 +32,8 @@ public override void Update() { base.Update(); … }
 
 By patching the file with our UModule.Update as a prefix to the derived class's
 own Update method, both methods get called by the Unity Engine, and the
-implementer needs no knowledge of this parent method, so can implement their own
-Update like any Unity developer is used to:
+implementer needs no knowledge of this parent method. Overriding the update
+method is therefore done in the same fashion Unity developers are used to:
 #+BEGIN_SRC csharp
 public void Update() { … }
 #+END_SRC
@@ -61,6 +60,22 @@ Patcher.Patch(updateMethod, valueUpdate);
 *** TODO It doesn't make sense to introduce 'moduleType' variable here
 Maybe make it a property?
 
+** Update routines
+#+BEGIN_SRC csharp :noweb-ref connection-update
+public static void ConnectionUpdate(UModule __instance) {
+            if (!__instance.Active) return;
+                Debug.Log(__instance.Connections.Count + " connections");
+            foreach (var connection in __instance.Connections) {
+                    Debug.Log("with " + connection.Value.Count + " targets");
+                foreach (var target in connection.Value) {
+                    var module = target.ModuleInstance;
+                    if (!module.Active) continue;
+                    var value = connection.Key.GetMethod.Invoke(__instance, new object[0]);
+                    target.SetMethod.Invoke(module, new object[] { value });
+                }
+            }
+        }
+#+END_SRC
 ** Output source
 #+BEGIN_SRC csharp :tangle UModule.cs
 using System.Collections.Generic;
@@ -70,16 +85,13 @@ using Harmony;
 using System.Reflection;
 using System.Linq;
 
-namespace Eidetic.URack
-{
-    public abstract partial class UModule : MonoBehaviour
-    {
+namespace Eidetic.URack {
+    public abstract partial class UModule : MonoBehaviour {
         public static Dictionary<int, UModule> Instances { get; private set; } = new Dictionary<int, UModule>();
         <<instantiate-patcher>>
         static List<Type> PatchedTypes = new List<Type>();
 
-        public static UModule Create(string moduleName, int id)
-        {
+        public static UModule Create(string moduleName, int id) {
             // Load the module's prefab into the scene
             var gameObject = Instantiate(Resources.Load<GameObject>(moduleName + "Prefab"));
             var instanceName = moduleName + "Instance" + id;
@@ -98,8 +110,7 @@ namespace Eidetic.URack
                 .Where(p => p.GetCustomAttribute<InputAttribute>() != null).ToArray();
 
             // for each "Input" apply a prefix to the property's set method
-            foreach (var inputProperty in inputProperties)
-            {
+            foreach (var inputProperty in inputProperties) {
                 if (inputProperty.PropertyType == typeof(PointCloud))
                     continue;
 
@@ -124,15 +135,13 @@ namespace Eidetic.URack
             return moduleInstance;
         }
 
-        public static void Remove(int id)
-        {
+        public static void Remove(int id) {
             Destroy(Instances[id].gameObject);
             Instances.Remove(id);
         }
 
         // patch the setter so that it adds the new voltage to our Voltages array
-        public static void SetterPrefix(UModule __instance, MethodBase __originalMethod, float value)
-        {
+        public static void SetterPrefix(UModule __instance, MethodBase __originalMethod, float value) {
             // get the setter from the InputsBySetter dictionary.
             // if it doesn't exist in there yet then add it
             var input = __instance.InputsBySetter.ContainsKey(__originalMethod)
@@ -143,12 +152,9 @@ namespace Eidetic.URack
             __instance.Voltages[input] = __instance.Voltages[input].Replace(1, value);
         }
 
-        public static void ValueUpdate(UModule __instance)
-        {
-            if (__instance.Active)
-            {
-                foreach (var input in __instance.Inputs)
-                {
+        public static void ValueUpdate(UModule __instance) {
+            if (__instance.Active) {
+                foreach (var input in __instance.Inputs) {
                     if (input.Property.PropertyType == typeof(PointCloud))
                         continue;
 
@@ -170,21 +176,7 @@ namespace Eidetic.URack
                 }
             }
         }
-
-        public static void ConnectionUpdate(UModule __instance)
-        {
-            if (__instance.Active)
-            {
-                foreach (var connection in __instance.Connections)
-                {
-                    var connectionInstance = connection.Value.ModuleInstance;
-                    if (!connectionInstance.Active) continue;
-                    var value = connection.Key.GetMethod.Invoke(__instance, new object[0]);
-                    connection.Value.SetMethod.Invoke(connectionInstance, new object[] { value });
-                }
-            }
-        }
-
+        <<connection-update>>
         public int Id { get; private set; }
         public string ModuleType { get; private set; }
         public string InstanceName { get; private set; }
@@ -194,7 +186,7 @@ namespace Eidetic.URack
         Dictionary<MethodBase, InputInfo> InputsBySetter = new Dictionary<MethodBase, InputInfo>();
         Dictionary<InputInfo, Vector2> Voltages = new Dictionary<InputInfo, Vector2>();
 
-        public Dictionary<Getter, Setter> Connections { get; private set; } = new Dictionary<Getter, Setter>();
+        public Dictionary<Getter, List<Setter>> Connections { get; private set; } = new Dictionary<Getter, List<Setter>>();
 
         public bool Active
         {
